# Mycraft

Mycraft/: .gitignore  CMakeLists.txt  make.txt  perf_profile.sh
Mycraft/include/glad/: glad.h
Mycraft/resources/: CMakeLists.txt  biome_parameters.json  default_pack_offsets.json
Mycraft/shaders/: CMakeLists.txt  block.frag  block.vert  default.frag  default.vert  skybox.frag  skybox.vert
Mycraft/src/: Application.cpp  Application.h  Block.cpp  Block.h  BlockRenderer.cpp  BlockRenderer.h  Camera.cpp  Context.cpp  Context.h  EBO.h  GameParameters.h  Helpers.cpp  Helpers.h  InputBroadcaster.cpp  Shader.cpp  Shader.h  Texture.cpp  UserInputs.h  VAO.cpp  VAO.h  WorldObject.cpp  glad.c  main.cpp  main_old.cpp  note on opengl multithreading.md
Mycraft/src/core/: CMakeLists.txt  InputBroadcaster.cpp  InputBroadcaster.h  InputListener.cpp  InputListener.h  VAO.cpp  VBO.cpp  VBO.h
Mycraft/src/render/: BlockRenderer.cpp  BlockRenderer.h  CMakeLists.txt  ChunkRenderer.cpp  ChunkRenderer.h  Fluid.cpp  Fluid.h  MainRenderer.cpp  MainRenderer.h  Mesh.cpp  Mesh.h  Renderable.h  Renderer.cpp  Renderer.h  Skybox.cpp  Skybox.h  SkyboxRenderer.cpp  SkyboxRenderer.h
Mycraft/src/shader/: CMakeLists.txt  Shader.cpp  Shader.h
Mycraft/src/texture/: BlockTexture.cpp  BlockTexture.h  CMakeLists.txt  SkyboxTexture.cpp  SkyboxTexture.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Mycraft/src/world/: BiomeManager.cpp  BiomeManager.h  Block.cpp  Block.h  BlockType.h  CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Constants.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Terrain.h  TerrainGenerator.cpp  TerrainGenerator.h  WorldObject.cpp  WorldObject.h
Mycraft/textures/: CMakeLists.txt  default_pack_offsets.json
